# english-training

./: .gitignore  README.md
api/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh
app/: .env.example  README.md  pubspec.yaml  vercel.json
app/assets/data/: blogmae_advanced.csv  blogmae_beginner.csv
app/lib/: main.dart
app/lib/config/: speech_evaluation_config.dart
app/lib/models/: blogmae_entry.dart  learning_entry.dart  lesson_list_row.dart  speech_evaluation_result.dart
app/lib/screens/: auth_screen.dart  blogmae_course_select_screen.dart  blogmae_deck_screen.dart  course_select_screen.dart  home_screen.dart  session_complete_screen.dart  speech_evaluation_screen.dart  training_deck_screen.dart  user_lesson_create_screen.dart  user_lesson_editor_screen.dart
app/lib/services/: blogmae_basic_loader.dart  composition_api_client.dart  learning_items_loader.dart  learning_progress_service.dart  quiz_picker.dart  (+1 more)
app/scripts/: vercel_build.sh
app/test/: english_answer_diff_score_test.dart  english_answer_diff_test.dart  quiz_picker_test.dart  speech_evaluation_result_test.dart  widget_test.dart
app/web/: index.html  manifest.json
docs/: requirements.md
supabase/: config.toml
supabase/migrations/: 20260404000000_learning_lessons_and_items.sql  20260405100000_profiles_and_learning_attempts.sql  20260407120000_user_lessons_and_rls.sql  20260410120000_learning_item_attempts_delete_own.sql  README.md
supabase/seeds/: learning_items.sql
tools/: generate_learning_seed.py
tools/scraping/: blogmae.py
(+7 files in other folders)
